--- a/template.html
+++ b/template.html
@@ -4,6 +4,27 @@
 <head>
   <title>Index of {{root_prefix}}{{path}}</title>
   <script src="https://code.iconify.design/1/1.0.6/iconify.min.js"></script>
+  <style type="text/css">
+td:nth-child(3) {
+  font-family: Consolas;
+  padding-right: 5px;
+}
+h1, th, td > a {
+  font-family: "Segoe UI",Helvetica;
+}
+a {
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
+}
+table {
+  border: 1px solid;
+}
+h1 {
+  margin-left: 10px;
+}
+  </style>
 </head>
 
 <body>
